# insight-forge

./: .env.example  .gitignore  .gitleaks.toml  ARCHITECTURE.md  BUG_FIX_APPLIED.md  CONTEXT_BACKEND_IMPLEMENTATION.md  GET_API_KEY.md  MANUAL_TESTING_GUIDE.md  QUICK_START.md  README.docker.md  README.md  READY_FOR_TESTING.md  SECURITY.md  STATUS.txt  check_settings.py  debug_chart.py  docker-compose.prod.yml  docker-compose.yml  render.yaml  test_api.py  test_upload_and_viz.py
backend/: .env.example  .env.test  BUGFIX_visualization_service.py  CONTEXT_FORMAT_CHEATSHEET.md  Dockerfile  Dockerfile.prod  MULTI_DATASET_SIMPLE_FORMAT.md  insightforge.db  insightforge.db.backup.20260204_140611  pyproject.toml  pytest.ini  railway.toml  requirements-dev.txt  requirements.txt  run_tests.sh  start.sh  test_api.py  test_context_nl_viz.py  test_multi_dataset_simple.py  test_simple_context.py  test_upload_and_viz.py
backend/alembic/: env.py
backend/alembic/versions/: 001_add_context_tables.py  002_add_dataset_context_fk.py  003_add_kaggle_credentials.py  004_add_user_llm_settings.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  database.py  (+2 more)
backend/examples/: multi_dataset_context_example.md  multi_dataset_simple_format.md  simple_context_example.md
backend/scripts/: populate_dataset_context_ids.py
backend/tests/: conftest.py  test_context_features.py  test_data.py  test_query_api.py  test_query_engine.py
backend/uploads/: 0e1d4f1e-62a5-4517-9e40-92f72f561702.csv  24fafe29-d8fb-476a-89bc-9758def2461e.parquet  5f1674e2-c4e5-4e07-b104-1c5a05c989aa.parquet  a122055c-ff21-499f-82a7-0689553a1fb8.csv  d7c57e8e-bd57-4c09-bcda-9a51d1742782.csv
(+145 files in other folders)
